--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,13 @@ Refer to the TRAC site for details on the tickets noting *BcdaQWidgets* in the t
 (https://subversion.xray.aps.anl.gov/trac/bcdaext/report/1?sort=ticket&asc=1)
 
 
-Version 0.1 (not released)
+Version 0.1.1 (not officially released)
 ---------------------------------
 
-* -tba-
+* handle color of alarm severity for CALC_INVALID
+
+
+Version 0.1 (not officially released)
+---------------------------------
+
+* initial trial
