--- a/CHANGES
+++ b/CHANGES
@@ -5,14 +5,8 @@ This describes user-visible changes between the versions.
 Refer to the TRAC site for details on the tickets noting *BcdaQWidgets* in the title.
 (https://subversion.xray.aps.anl.gov/trac/bcdaext/report/1?sort=ticket&asc=1)
 
+pre-release (development) Versions
+----------------------------------
 
-Version 0.1.1 (not officially released)
----------------------------------
-
-* handle color of alarm severity for CALC_INVALID
-
-
-Version 0.1 (not officially released)
----------------------------------
-
-* initial trial
+:0.1.1: handle color of alarm severity for CALC_INVALID
+:0.1:   initial trial
