--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,7 @@ This describes user-visible changes between the versions.
 Refer to the TRAC site for details on the tickets noting *BcdaQWidgets* in the title.
 (https://subversion.xray.aps.anl.gov/trac/bcdaext/report/1?sort=ticket&asc=1)
 
-pre-release (development) Versions
+Unreleased (development) Versions
 ----------------------------------
 
 :0.1.1: handle color of alarm severity for CALC_INVALID
