always convert text widgets from QString to str

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ Refer to the TRAC site for details on the tickets noting *BcdaQWidgets* in the t
 Unreleased (development) Versions
 ----------------------------------
 
+2015.0415.0: minor: convert QString to str
 2015.0413.0: replaced PySide support with PyQt4 since PySide project is decaying
 :0.1.5: changed packaging to simplify building docs at readthedocs.org
 :0.1.4: revised PyQt import to pick what has already been imported
