--- a/CHANGES
+++ b/CHANGES
@@ -1,15 +1,11 @@
-.. -*- restructuredtext -*-
-   $Id$
 
-This describes user-visible changes between the versions.
-Refer to the TRAC site for details on the tickets noting *BcdaQWidgets* in the title.
-(https://subversion.xray.aps.anl.gov/trac/bcdaext/report/1?sort=ticket&asc=1)
+This describes user-visible changes between versions.
 
 Unreleased (development) Versions
 ----------------------------------
 
-2015.0415.0: minor: convert QString to str
-2015.0413.0: replaced PySide support with PyQt4 since PySide project is decaying
+:2015.0415.0: minor: convert QString to str
+:2015.0413.0: replaced PySide support with PyQt4 since PySide project is decaying
 :0.1.5: changed packaging to simplify building docs at readthedocs.org
 :0.1.4: revised PyQt import to pick what has already been imported
 :0.1.2: add BcdaQLabel_RBV widget for motors
